# enigma

./: .gitignore  Cargo.toml  README.md
crates/database/: Cargo.toml
crates/database/src/: migrations.rs  models.rs  repository.rs
crates/middleware/: Cargo.toml
crates/middleware/src/: layer.rs
crates/server/src/: app.rs  handlers.rs  proxy.rs
crates/shared/: Cargo.toml
crates/shared/src/: types.rs
example/rust/src/: main.rs
example/ts/: index.js  package.json
frontend/: README.md  next.config.mjs  package.json  pnpm-lock.yaml
frontend/app/: globals.css  layout.tsx  page.tsx
frontend/app/api/webhooks/clerk/: route.ts
frontend/app/auth/sign-in/[[...sign-in]]/: page.tsx
frontend/app/auth/sign-up/[[...sign-up]]/: page.tsx
frontend/app/dashboard/: page.tsx
frontend/components/: api-list.tsx
frontend/components/icons/: Shield.tsx
frontend/lib/: api-client.ts
frontend/src/: client-layout.js  middleware.ts
frontend/src/app/: globals.css  index.css  layout.jsx  page.js  preloader.css
frontend/src/app/api/users/: route.js
frontend/src/app/api/webhooks/clerk/: route.js
frontend/src/app/dashboard/: dashboard.css  page.jsx
frontend/src/components/: api-list.jsx
frontend/src/components/AnimatedButton/: AnimatedButton.css  AnimatedButton.jsx
frontend/src/components/CTAWindow/: CTAWindow.css  CTAWindow.jsx
frontend/src/components/ClientReviews/: ClientReviews.css  ClientReviews.jsx  client-reviews-content.js
frontend/src/components/ConditionalFooter/: ConditionalFooter.jsx
frontend/src/components/Copy/: Copy.css  Copy.jsx
frontend/src/components/FeaturedProjects/: FeaturedProjects.css  FeaturedProjects.jsx  featured-projects-content.js
frontend/src/components/Footer/: Footer.css  Footer.jsx
frontend/src/components/Gallery/: Gallery.css  Gallery.jsx  items.js
frontend/src/components/HowWeWork/: HowWeWork.css  HowWeWork.jsx
frontend/src/components/MenuBtn/: MenuBtn.css  MenuBtn.jsx
frontend/src/components/Nav/: Nav.css  Nav.jsx
frontend/src/components/Spotlight/: Spotlight.css  Spotlight.jsx
frontend/src/components/TopBar/: TopBar.css  TopBar.jsx
frontend/src/components/icons/: ArrowRight.jsx  Code.jsx  Zap.jsx
frontend/src/components/ui/: sonner.jsx
frontend/src/hooks/: useViewTransition.js
frontend/src/lib/: api-client.js  auth.js
pkgs/rust/src/: errors.rs  lib.rs
pkgs/ts/: package.json  pnpm-lock.yaml  tsup.config.ts
pkgs/ts/src/: response.ts  types.ts
server/: Cargo.toml
server/crates/database/src/: lib.rs  repository.rs
server/crates/middleware/: Cargo.toml
server/crates/middleware/src/: facilitator_client.rs  layer.rs  lib.rs  price.rs
server/crates/server/: Cargo.toml
server/crates/server/src/: app.rs  handlers.rs  lib.rs
server/crates/shared/src/: lib.rs
server/example/rust/: Cargo.toml
server/example/rust/src/: main.rs
server/example/ts/: pnpm-lock.yaml
server/pkgs/rust/: Cargo.toml  README.md
server/pkgs/rust/src/: request.rs
server/pkgs/ts/: .npmignore  README.md  package.json  pnpm-lock.yaml  tsconfig.json
server/pkgs/ts/src/: client.ts  config.ts  errors.ts  index.ts  request.ts
server/src/: main.rs
server/ui/: pnpm-lock.yaml
server/ui/app/: page.tsx
server/ui/app/dashboard/: page.tsx
server/ui/components/: create-api-form.tsx  dashboard-overview.tsx  hero.tsx
server/ui/components/gl/shaders/: simulationMaterial.ts  vignetteShader.ts
src/: main.rs
ui/app/: layout.tsx
ui/components/: apis-list.tsx  header.tsx  logo.tsx  navigation.tsx
ui/components/gl/: index.tsx  particles.tsx
ui/components/gl/shaders/: utils.ts
ui/hooks/: use-toast.ts
