[workspace]
members = ["crates/database", "crates/shared"]

[workspace.dependencies]
anyhow = "1.0"
chrono = { version = "0.4", features = ["serde"] }
serde = { version = "1.0", features = ["derive"] }
serde_json = "1.0"
shared = { path = "crates/shared" }
sqlx = { version = "0.7", features = [
    "runtime-tokio-rustls",
    "postgres",
    "chrono",
    "uuid",
] }
uuid = { version = "1.0", features = ["v4", "serde"] }
thiserror = "1.0"
tokio = { version = "1.0", features = ["full"] }

[package]
name = "enigma"
version = "0.1.0"
edition = "2024"

[dependencies]


[[bin]]
name = "server"
path = "src/main.rs"
