[workspace]
members = ["crates/database", "crates/shared", "example/rust", "pkgs/rust"]

[workspace.dependencies]
anyhow = "1.0"
axum = { version = "0.8.4" }
axum-core = { version = "0.5.2" }
chrono = { version = "0.4", features = ["serde"] }
database = { path = "crates/database" }
dotenvy = { version = "0.15.7" }
http = { version = "1.3.1" }
middleware = { path = "crates/middleware" }
once_cell = { version = "1.21.3" }
reqwest = { version = "0.12.23", features = ["json"] }
serde = { version = "1.0", features = ["derive"] }
serde_json = "1.0"
server = { path = "crates/server" }
shared = { path = "crates/shared" }
solana-client = { version = "2.3.7" }
solana-sdk = { version = "2.3.1" }
sqlx = { version = "0.7", features = [
    "runtime-tokio-rustls",
    "postgres",
    "chrono",
    "uuid",
] }
uuid = { version = "1.0", features = ["v4", "serde"] }
thiserror = "1.0"
tokio = { version = "1.0", features = ["full"] }
tower = { version = "0.5.2" }
tower-http = { version = "0.5", features = ["cors", "trace"] }
tracing = "0.1"
tracing-subscriber = "0.3"
url = { version = "2.5.4", features = ["serde"] }
x402-reqwest = { version = "0.2" }
x402-rs = { version = "0.7" }
spl-token = { version = "8.0.0", features = ["no-entrypoint"] }
spl-token-2022 = { version = "9.0.0", features = ["no-entrypoint"] }

[package]
name = "enigma"
version = "0.1.0"
edition = "2024"

[dependencies]
shared = { workspace = true }
database = { workspace = true }
server = { workspace = true }
tokio = { workspace = true }
sqlx = { workspace = true }
tracing-subscriber = { workspace = true }
tracing = { workspace = true }
axum = { workspace = true }
anyhow = { workspace = true }
dotenvy = { workspace = true }

[[bin]]
name = "server"
path = "src/main.rs"
