[package]
name = "middleware"
version = "0.1.0"
edition = "2021"

[dependencies]
x402-rs = { workspace = true }
thiserror = { workspace = true }
reqwest = { workspace = true, features = ["json"] }
http = { workspace = true }
once_cell = { workspace = true }
axum-core = { workspace = true }
url = { workspace = true, features = ["serde"] }
serde_json = { workspace = true }
serde = { workspace = true, features = ["derive"] }
tower = { workspace = true }
tracing = { workspace = true, optional = true }
database = { workspace = true }
uuid = { workspace = true }
axum = { workspace = true }
solana-sdk = { workspace = true }

[features]
default = []
telemetry = ["dep:tracing", "x402-rs/telemetry"]
