[package]
name = "server"
version = "0.1.0"
edition = "2021"

[dependencies]
shared = { workspace = true }
database = { workspace = true }
axum = { workspace = true }
tokio = { workspace = true }
serde = { workspace = true }
serde_json = { workspace = true }
middleware = { workspace = true }
uuid = { workspace = true }
chrono = { workspace = true }
tower = { workspace = true }
tower-http = { workspace = true, features = ["cors", "trace"] }
tracing = { workspace = true }
tracing-subscriber = { workspace = true }
anyhow = { workspace = true }
thiserror = { workspace = true }
sqlx = { workspace = true }
reqwest = { workspace = true, features = ["json"] }
x402-rs = { workspace = true }
dotenvy = { workspace = true }
url = { workspace = true }
solana-sdk = { workspace = true }
